# compiler

./: .gitignore  CMakeLists.txt  Makefile  ReadMe.txt  a.out  gencode.cpp  gencode.h  globals.h  lexic.cpp  lexic.h  lexical_analyzer.h  lexical_anaylzer.cpp  log.txt  main.cpp  node.h  operator_properties.h  program.cmm  readme.md  readme.txt  runtime.cmm  runtime.cpp  runtime.s  semantic.cpp  semantic.h  symbol.h  syntax.cpp  syntax.h  token.h
msm/: ._msm.txt  msm.txt  readme.md
test/: CMakeLists.txt  Makefile  exec.cpp  exec.hpp  node.cpp  node.hpp  omp.cpp  omp.hpp  readme.md  test.cpp  test.hpp  test_break_do_while.cmm  test_break_while.cmm  test_continue_for.cmm  test_continue_while.cmm  tester.cpp  thread.cpp  thread.hpp  token.hpp  tokens.cpp  usage.cpp  usage.hpp
test/tests/: test_break_for.cmm  test_continue_do_while.cmm  test_continue_for.cmm  test_continue_while.cmm
test/tests/array/: test_tab.cmm  test_tab_2dimensions.cmm
test/tests/conditions/: if-else.cmm  if-expr.cmm  if.cmm  test_if_else2.cmm  test_if_else3.cmm
test/tests/functions/: crash_test_fonction.cmm  test_function.cmm  test_recursive.cmm
test/tests/loops/: test_break_do_while.cmm  test_break_for.cmm  test_break_while.cmm  test_continue_for.cmm  test_continue_for2.cmm  test_do_while.cmm  test_dowhile2.cmm  test_for.cmm  test_for2.cmm  test_while.cmm  test_while2.cmm
test/tests/memory/: malloc1.cmm
test/tests/operators/operations/: divide.cmm  divide2.cmm  minus.cmm  modulo.cmm  multiply.cmm  plus.cmm  test_prefixe.cmm
test/tests/operators/priority/: priority-multiply-divide.cmm  priority-plus-divide.cmm
test/tests/variable/: crash_test_bloc_var.cmm  test_bloc_var.cmm  test_pointeur.cmm  test_variable.cmm
